# org-chart

./: .flake8  .gitattributes  .gitignore  .pylintrc  Dockerfile  README.md  manage.py  mypy.ini  pyproject.toml  renovate.json
.cursor/rules/: django.mdc  org-chart-python.mdc
.github/workflows/: build.yml  deactivate-test.yml  deploy.yml
.nomad/: org-chart.nomad
.nomad/conf/: .env.tpl  nginx.conf
.nomad/scripts/: prestart.sh  web.sh
org/: admin.py  apiary.py  apps.py  google.py  keycloak.py  models.py  ramp.py  tasks.py
org/migrations/: 0001_initial.py  0002_alter_person_options_person_hubspot_user_id_and_more.py  0003_person_title.py
orgchart/: __init__.py  api.py  apiary.py  asgi.py  auth.py  celery.py  tasks.py  urls.py  wsgi.py
orgchart/settings/: ci.py  development.py  production.py
