[project]
name = "org-chart"
version = "0"
description = "Machine-readable and writable org chart"
authors = [
    {name = "Kristaps Berzinch",email = "kristapsberzinch@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django (==6.0)",
    "mozilla-django-oidc (==4.0.1)",
    "uwsgi (==2.0.31)",
    "mysqlclient (==2.2.7)",
    "hiredis (==3.3.0)",
    "django-redis (==6.0.0)",
    "sentry-sdk[django] (==2.48.0)",
    "djangorestframework (==3.16.1)",
    "celery[redis] (==5.6.0)",
    "google-api-python-client (==2.187.0)",
    "hubspot-api-client (==12.0.0)",
]


[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "25.12.0"
flake8 = "7.3.0"
pylint = "4.0.4"
mypy = "1.19.1"
django-stubs = {extras = ["compatible-mypy"], version = "5.2.8"}
types-requests = "^2.32.0.20250328"
celery-types = "0.23.0"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "3.16.6"}

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "orgchart.settings.development"
