[project]
name = "org-chart"
version = "0"
description = "Machine-readable and writable org chart"
authors = [
    {name = "Kristaps Berzinch",email = "kristapsberzinch@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "django (==6.0.5)",
    "mozilla-django-oidc (==5.0.2)",
    "uwsgi (==2.0.31)",
    "mysqlclient (==2.2.8)",
    "hiredis (==3.3.1)",
    "django-redis (==6.0.0)",
    "sentry-sdk[django] (==2.58.0)",
    "djangorestframework (==3.17.1)",
    "celery[redis] (==5.6.3)",
    "google-api-python-client (==2.195.0)",
    "hubspot-api-client (==12.0.0)",
]


[build-system]
requires = ["poetry-core==2.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "26.3.1"
flake8 = "7.3.0"
pylint = "4.0.5"
mypy = "1.20.2"
django-stubs = {extras = ["compatible-mypy"], version = "6.0.3"}
types-requests = "^2.32.0.20250328"
celery-types = "0.26.0"
djangorestframework-stubs = {extras = ["compatible-mypy"], version = "3.16.9"}

[tool.black]
line-length = 100
target-version = ['py313']

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "orgchart.settings.development"
